# embedded-rust-H2AL

./: Cargo.toml  README.md
notes/: interruptsAndEvents.md
pics/: embeddedRust.graphml
src/: events.rs  gpio.rs  lib.rs  timer.rs
src/device/: mod.rs  stm32f1xx.rs
