[package]
edition = "2018"
name = "embedded_rust_h2al"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-hal = {version = "0.2.4", features = ["unproven"]}
heapless = "0.7.7"
log = "0.4.14"
once_cell = {version = "1.4.0", default-features = false}
stm32f1xx-hal = {version = "0.7.0", features = ["stm32f103", "rt", "medium"]}

[features]
default = ["stm32f1xx"]
stm32f1xx = []
